--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@dfinity/agent": "^1.0.1",
     "@dfinity/ledger-icp": "^2.2.2",
     "@dfinity/principal": "^1.0.1",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@junobuild/core": "^0.0.46",
     "@popperjs/core": "^2.11.8",
+    "@rollup/plugin-inject": "^5.0.5",
     "@tailwindcss/forms": "^0.5.2",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.1",
+    "crypto-browserify": "^3.12.0",
     "metamask-react": "^2.7.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
@@ -29,13 +32,17 @@
     "react-modal-video": "^2.0.1",
     "react-router-dom": "^6.22.3",
     "sjcl": "^1.0.8",
+    "stream-browserify": "^3.0.0",
     "swiper": "^11.0.6",
     "tailwindcss-custom-groups": "^1.1.2",
     "tippy.js": "^6.3.7",
     "vite-plugin-environment": "^1.1.3",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-notifier": "^0.1.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
