--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^4.4.1",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "metamask-react": "^2.7.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
