--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "crypto-js": "^4.2.0",
     "metamask-react": "^2.7.0",
     "process": "^0.11.10",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-modal-video": "^2.0.1",
     "react-router-dom": "^6.22.3",
     "sjcl": "^1.0.8",
