--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dfinity/agent": "^1.0.1",
+    "@dfinity/agent": "^1.4.0",
+    "@dfinity/candid": "^2.2.0",
     "@dfinity/ledger-icp": "^2.2.2",
+    "@dfinity/nns": "^8.1.0",
     "@dfinity/principal": "^1.0.1",
+    "@dfinity/utils": "^2.10.0",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@junobuild/core": "^0.0.46",
     "@popperjs/core": "^2.11.8",
     "@rollup/plugin-inject": "^5.0.5",
     "@tailwindcss/forms": "^0.5.2",
+    "bioniq": "^0.0.0",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.1",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
+    "discord.js": "^14.17.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "metamask-react": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "process": "^0.11.10",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
