--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dfinity/candid": "^2.2.0",
     "@dfinity/ledger-icp": "^2.2.2",
     "@dfinity/nns": "^8.1.0",
+    "@dfinity/nns-proto": "^2.0.2",
     "@dfinity/principal": "^1.0.1",
     "@dfinity/utils": "^2.10.0",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
