--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "swiper": "^11.0.6",
     "tailwindcss-custom-groups": "^1.1.2",
     "tippy.js": "^6.3.7",
+    "util": "^0.12.5",
     "vite-plugin-environment": "^1.1.3",
-    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-plugin-notifier": "^0.1.5"
   },
   "devDependencies": {
