--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "tippy.js": "^6.3.7",
     "util": "^0.12.5",
     "vite-plugin-environment": "^1.1.3",
-    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-plugin-notifier": "^0.1.5"
   },
   "devDependencies": {
@@ -68,6 +67,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
