--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
     "@popperjs/core": "^2.11.8",
     "@rollup/plugin-inject": "^5.0.5",
     "@tailwindcss/forms": "^0.5.2",
+    "assert": "^2.1.0",
     "bioniq": "^0.0.0",
     "bootstrap": "^5.3.3",
-    "buffer": "^6.0.3",
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
-    "crypto-browserify": "^3.12.0",
+    "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "metamask-react": "^2.7.0",
     "node-fetch": "^3.3.2",
-    "process": "^0.11.10",
+    "path": "^0.12.7",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -60,12 +60,14 @@
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "buffer": "^6.0.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
+    "process": "^0.11.10",
     "tailwindcss": "^3.4.4",
     "vite": "^5.1.4",
     "vite-plugin-node-polyfills": "^0.23.0"
